--- a/css/index.css
+++ b/css/index.css
@@ -1,81 +1,110 @@
-header{
+header {
     position: relative;
 }
 
 .foto-home {
     height: 200px;
+    border-radius: 10% / 50%;
 }
 
-.palavra-home{
+.palavras-home{
+    perspective: 6px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 400%;
+}
+
+.palavra-home {
     font-family: "Shadows Into Light", cursive;
     font-weight: bold;
     font-color: #D5447E;
 }
 
-.agilidade{
-    position: absolute;
-    top: 5%;
-    left: 35%;
-}
+.banner-twitter{
+    width: 14em;
+    line-height: 1em;
+    padding: 1em 0;
+    box-sizing: border-box;
 
-.javascript{
-    position: absolute;
-    top: 5%;
-    left: 65%;
-}
+    text-align: center;
+    text-decoration: none;
+    background-color: #3C1D3D;
+    color: #FFF;
+    border: #000 solid 0.25em;
+    font-size: 1.2em;
 
-.responsivo{
     position: absolute;
-    top: 10%;
-    left: 15%;
+    top: 0%;
+    right: 0%;
+    transform-origin: 0 0;
+    transform: translate(6.5754em, -2.4749em) rotate(45deg);
 }
 
 .eficiencia {
-    position: absolute;
-    top: 10%;
-    left: 85%;
+    top: 50%;
+    left: 60%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(4px);
 }
 
-.acessibilidade{
-    position: absolute;
-    top: 15%;
+.codigo-limpo {
+    top: 45%;
     left: 25%;
+    transform: translate(-50%, -50%) rotate(-10deg) translateZ(2px);
 }
 
-.design{
-    position: absolute;
+.css3 {
+    top: 55%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(5deg) translateZ(2px);
+}
+
+.html5 {
+    top: 30%;
+    left: 65%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(2px);
+}
+
+.javascript {
     top: 15%;
-    left: 75%;
+    left: 60%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(1px);
 }
 
-.codigo-limpo{
-    position: absolute;
-    top: 20%;
-    left: 10%;
+.acessibilidade {
+    top: 30%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(3px);
 }
 
-.html5{
-    position: absolute;
-    top: 20%;
-    left: 90%;
+.responsivo {
+    top: 40%;
+    left: 40%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(3px);
 }
 
-.css3{
-    position: absolute;
-    top: 25%;
-    left: 30%;
+.otimizacoes {
+    top: 70%;
+    left: 65%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(2px);
 }
 
-.otimizacoes{
-    position: absolute;
-    top: 25%;
-    left: 70%;
+.agilidade {
+    top: 75%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(5deg) translateZ(1px);
 }
 
-.boas-praticas{
-    position: absolute;
-    top: 0;
-    left: 47%;
+.design {
+    top: 40%;
+    left: 60%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(2px);
+}
+
+.boas-praticas {
+    scale(0.25);
 }
 
 .saudacao p {
@@ -84,22 +113,29 @@ header{
     line-height: 1;
     padding: 2em;
 }
+
 .saudacao-inicio {
     font-size: 3em;
     color: #889;
 }
+
 .saudacao-ultima-linha {
     text-align: right;
     display: block;
 }
+
 .saudacao strong {
     font-size: 2em;
     color: #000;
 }
+
 .saudacao em {
     color: #851944;
     font-size: 4em;
+    transform: rotate(-5deg) skew(-10deg) ;
+    display: inline-block;
 }
+
 .botao-index {
     font-size: 1.25em;
     background-color: #851944;
@@ -111,56 +147,69 @@ header{
     display: block;
     text-align: center;
 }
+
 .secao-inicio {
     padding: 2em;
 }
+
 .secao-inicio h2 {
     font-size: 3em;
     text-transform: uppercase;
     margin-bottom: .5em;
 }
+
 .trabalhos {
     background-color: #3C1D3D;
     border-top: .5em solid #000;
     border-bottom: .5em solid #000;
 }
+
 .trabalhos h2 {
     color: #FFF;
 }
+
 .trabalhos ul {
     overflow: hidden;
     border: .5em solid black;
 }
+
 .trabalhos li {
     float: left;
     width: 33.333%;
 }
+
 .trabalhos img {
     width: 100%;
     display: block;
 }
+
 .blog {
     background-color: #999;
     color: #FFF;
     border-bottom: .5em solid #851944;
 }
+
 .blog small {
     position: relative;
     top: -2em;
 }
+
 .blog li a {
     color: #FCF;
     padding: .5em;
     display: block;
 }
+
 footer {
     background-color: #000;
     color: #FFF;
     padding: 2em;
 }
+
 footer h2 {
     font-size: 3em;
 }
+
 footer a {
     color: #F99;
 }
@@ -171,15 +220,15 @@ main {
     float: none;
 }
 
-.blog{
+.blog {
     position: relative;
 }
 
-.mais-recente{
+.mais-recente {
     background-color: #F2FFFC;
 }
 
-.inicio-post{
+.inicio-post {
     position: absolute;
     top: 4em;
     height: 8em;
@@ -190,10 +239,10 @@ main {
     padding: 1.5em;
 }
 
-.mais-recente a{
+.mais-recente a {
     color: #F26;
 }
 
-.blog li{
+.blog li {
     width: 30%;
 }
