--- a/css/index.css
+++ b/css/index.css
@@ -7,20 +7,26 @@ header {
     border-radius: 10% / 50%;
 }
 
-.palavras-home{
+body{
     perspective: 6px;
+    perspective-origin: 50% 160px;
+}
+
+.palavras-home{
+    transform-style: preserve-3d;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    font-size: 400%;
 }
 
 .palavra-home {
     font-family: "Shadows Into Light", cursive;
     font-weight: bold;
     font-color: #D5447E;
+    font-size: 400%;
+    position: absolute;
 }
 
 .banner-twitter{
@@ -46,65 +52,67 @@ header {
 .eficiencia {
     top: 50%;
     left: 60%;
-    transform: translate(-50%, -50%) rotate(-5deg) translateZ(4px);
+    transform: translate(-50%, -50%) translateZ(4px) rotate(-5deg)  scale(0.25);
 }
 
 .codigo-limpo {
     top: 45%;
     left: 25%;
-    transform: translate(-50%, -50%) rotate(-10deg) translateZ(2px);
+    transform: translate(-50%, -50%) translateZ(2px) rotate(-10deg) scale(0.25);
 }
 
 .css3 {
     top: 55%;
     left: 35%;
-    transform: translate(-50%, -50%) rotate(5deg) translateZ(2px);
+    transform: translate(-50%, -50%) translateZ(2px) rotate(5deg) scale(0.25);
 }
 
 .html5 {
     top: 30%;
     left: 65%;
-    transform: translate(-50%, -50%) rotate(10deg) translateZ(2px);
+    transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(0.25);
 }
 
 .javascript {
     top: 15%;
     left: 60%;
-    transform: translate(-50%, -50%) rotate(-5deg) translateZ(1px);
+    transform: translate(-50%, -50%) translateZ(1px) rotate(-5deg) scale(0.25);
 }
 
 .acessibilidade {
     top: 30%;
     left: 35%;
-    transform: translate(-50%, -50%) rotate(-5deg) translateZ(3px);
+    transform: translate(-50%, -50%) translateZ(3px) rotate(-5deg) scale(0.25);
 }
 
 .responsivo {
     top: 40%;
     left: 40%;
-    transform: translate(-50%, -50%) rotate(10deg) translateZ(3px);
+    transform: translate(-50%, -50%) translateZ(3px) rotate(10deg) scale(0.25);
 }
 
 .otimizacoes {
     top: 70%;
     left: 65%;
-    transform: translate(-50%, -50%) rotate(-5deg) translateZ(2px);
+    transform: translate(-50%, -50%) translateZ(2px) rotate(-5deg) scale(0.25);
 }
 
 .agilidade {
     top: 75%;
     left: 35%;
-    transform: translate(-50%, -50%) rotate(5deg) translateZ(1px);
+    transform: translate(-50%, -50%)translateZ(1px) rotate(5deg)  scale(0.25);
 }
 
 .design {
     top: 40%;
     left: 60%;
-    transform: translate(-50%, -50%) rotate(10deg) translateZ(2px);
+    transform: translate(-50%, -50%) translateZ(2px) rotate(10deg) scale(0.25);
 }
 
 .boas-praticas {
-    scale(0.25);
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%) translateZ(-0.5px) scale(0.25);
 }
 
 .saudacao p {
@@ -184,6 +192,7 @@ header {
 }
 
 .blog {
+    position: relative;
     background-color: #999;
     color: #FFF;
     border-bottom: .5em solid #851944;
@@ -192,6 +201,10 @@ header {
 .blog small {
     position: relative;
     top: -2em;
+}
+
+.blog li {
+    width: 30%;
 }
 
 .blog li a {
@@ -220,10 +233,6 @@ main {
     float: none;
 }
 
-.blog {
-    position: relative;
-}
-
 .mais-recente {
     background-color: #F2FFFC;
 }
@@ -241,8 +250,4 @@ main {
 
 .mais-recente a {
     color: #F26;
-}
-
-.blog li {
-    width: 30%;
 }
