--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,11 @@ body{
     transform: translate(6.5754em, -2.4749em) rotate(45deg);
 }
 
+html, body{
+    height: 100%;
+    overflow-x: hidden;
+}
+
 .eficiencia {
     top: 50%;
     left: 60%;
