--- a/css/blog.css
+++ b/css/blog.css
@@ -9,6 +9,10 @@
 
 .post-blog {
     padding-bottom: 1.5em;
-    border-bottom: 1px solid #ccc;
     margin-bottom: 1em;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(to right, transparent 5%, darkgray, transparent 95%);
+    background-size: 100% 1px;
+    background-position: bottom center;
+
 }
