--- a/css/blog.css
+++ b/css/blog.css
@@ -7,12 +7,12 @@
     background-color: #E6E7E8;
 }
 
-.post-blog {
-    padding-bottom: 1.5em;
-    margin-bottom: 1em;
-    background-repeat: no-repeat;
+.post-blog + .post-blog {
+    padding-top: 1.5em;
+    margin-top: 1em;
     background-image: linear-gradient(to right, transparent 5%, darkgray, transparent 95%);
     background-size: 100% 1px;
-    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-position: top center;
 
 }
