--- a/css/site.css
+++ b/css/site.css
@@ -137,3 +137,13 @@ main {
     right: 0;
     height: 300px;
 }
+
+main a:hover,
+footer a:hover,
+main a:focus, footer a:focus{
+    background-color: red;
+}
+
+aside a:hover, aside a:focus{
+    text-shadow: 0 0 2px pink;
+}
