--- a/css/site.css
+++ b/css/site.css
@@ -8,8 +8,7 @@ body {
 h1,
 h2,
 .subtitulo-principal,
-.banner-twitter
-{
+.banner-twitter {
     font-family: "Open Sans Condensed", "Arial", sans-serif;
 }
 
@@ -61,9 +60,9 @@ main p {
 
 .rodape-pagina {
     background-image: radial-gradient(ellipse at left bottom, rgba(60, 29, 61, 0.8) 65%,
-        black 65%,
-        black 70%,
-        transparent 70%);
+    black 65%,
+    black 70%,
+    transparent 70%);
     width: 25%;
     color: #F2FFFC;
     padding: 1em;
@@ -71,7 +70,7 @@ main p {
     position: fixed;
     bottom: 0;
     left: 0;
- }
+}
 
 .container {
     width: 80ch;
@@ -93,6 +92,7 @@ em {
 }
 
 .icones-redes-sociais a {
+    position: relative;
     width: 40px;
     height: 40px;
     display: block;
@@ -140,10 +140,35 @@ main {
 
 main a:hover,
 footer a:hover,
-main a:focus, footer a:focus{
+main a:focus, footer a:focus {
     background-color: red;
 }
 
-aside a:hover, aside a:focus{
+aside a:hover, aside a:focus {
     text-shadow: 0 0 2px pink;
+}
+
+.icones-redes-sociais a:hover::after,
+.icones-redes-sociais a:focus::after{
+    content: attr(data-legenda);
+    color: #FFFFFF;
+    background-color: #000000;
+    text-indent: 0;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 300%;
+    font-size: .75em;
+}
+
+.icones-redes-sociais a:hover::before,
+.icones-redes-sociais a:focus::before {
+    content: '';
+    width: 1em;
+    height: 1em;
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translateY(.5em) rotate(45deg);
 }
