--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,5 +1,9 @@
+.portfolio{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .portfolio li {
-    display: inline-block;
     border: .5em solid black;
     background-color: #FAFFFC;
     width: 45%;
@@ -8,8 +12,13 @@
     margin-right: 1em;
     margin-bottom: 1em;
     box-shadow: 0 0 4px #000;
+    flex: 1 1 45%;
 }
 
 .portfolio img {
     width: 100%;
+}
+
+.portfolio li:first-child{
+    flex-basis: 100%;
 }
