--- a/css/site.css
+++ b/css/site.css
@@ -112,7 +112,7 @@ em {
 }
 
 main {
-    width: 80%;
+    width: calc(100% - .9 * 300px);
     float: left;
     padding-bottom: 4em;
 }
@@ -125,7 +125,7 @@ main {
 }
 
 .navegacao-site {
-    width: 20%;
+    width: calc(0.9 * 300px);
     float: right;
     position: relative;
     top: 300px;
