--- a/css/contato.css
+++ b/css/contato.css
@@ -1,63 +1,99 @@
-main {
-    width: 100%;
-    padding-bottom: 4em;
-}
-
 legend,
-label[for="msg"]{
+label[for="msg"] {
     font-weight: bold;
     padding-top: 1em;
 }
 
-label[for]{
+label[for],
+button {
     display: block;
 }
 
 input[type="text"],
 input[type="email"],
-textarea{
+textarea {
     font-family: inherit;
     font-size: 100%;
     padding: .25em .25em;
     width: 100%;
     box-sizing: border-box;
-    border: 1px solid #E6E7E8;
+    border: 1px solid #C2CCCA;
 }
 
 fieldset > fieldset {
     display: inline;
 }
 
-fieldset option{
+label[for="outro"] {
     display: inline;
 }
 
-input[name="outro-assunto"]{
+input[name="outro-assunto"] {
     width: auto;
     display: inline;
 }
 
-input:focus, textarea:focus{
+input:focus,
+textarea:focus {
     background-color: #FFD;
 }
 
-input:invalid{
-    box-shadow: 0 0 3px red ;
+input:invalid {
+    box-shadow: 0 0 3px red;
 }
 
-.botao-submit{
-    float: right;
+button {
+    border: 0;
+    padding: .5em .8em;
+    font-family: "Open Sans Condensed", "Arial", sans-serif;
+    background-color: #3C1D3D;
+    color: #FFFFFF;
+    font-size: 1.2em;
     margin-top: 1em;
     margin-left: auto;
-    border: 0;
-    background-color: #3C1D3D;
-    font-size: 1.2em;
-    font-family: "Open Sans Condensed", "Arial", sans-serif;
-    padding: 0.8em;
-    color: #FFFFFF;
-    display: block;
+
 }
 
-.botao-submit:hover, .botao-submit:focus{
+button:hover,
+button:focus {
     background-color: #8C1D3D;
+}
+
+input[value="Outro"] ~input {
+    display: none;
+}
+
+input[value="Outro"]:checked ~ input {
+    display: inline;
+}
+
+.com-icone{
+    position: relative;
+}
+
+.com-icone::after{
+    content:'';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 2em;
+    height: 2em;
+    background-size: 50% 50%;
+    background-color: #8C1D3D;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.com-icone + input{
+    position: relative;
+    left: 2em;
+    width: calc(100% - 2em);
+}
+
+.com-icone[for="nome"]::after{
+    background-image: url(../imagens/usuario.png);
+}
+
+.com-icone[for="email"]::after{
+    background-image: url(../imagens/email.png);
 }
