--- a/css/site.css
+++ b/css/site.css
@@ -3,6 +3,7 @@ body {
     background-color: #F2FFFC;
     font-size: 120%;
     line-height: 1.5;
+    display: block;
 }
 
 h1,
@@ -112,23 +113,22 @@ em {
 }
 
 main {
-    width: calc(100% - .9 * 300px);
-    float: left;
     padding-bottom: 4em;
+    flex-grow: 3;
 }
 
 .minha-foto,
 .navegacao-site {
     border-left: .5em solid black;
-    border-bottom: .5em solid black;
     box-sizing: border-box;
 }
 
+.minha-foto{
+    border-bottom: .5em solid black;
+}
+
 .navegacao-site {
-    width: calc(0.9 * 300px);
-    float: right;
-    position: relative;
-    top: 300px;
+    padding-top: calc(300px + 1em);
 }
 
 .minha-foto {
